--- a/carChase.html
+++ b/carChase.html
@@ -7,7 +7,7 @@
       <a-assets>
         <a-asset-item id="car" src="aventador.dae" crossorigin="anonymous"></a-asset-item>
       </a-assets>
-<!--      <a-entity collada-model="#car"></a-entity>-->
+      <a-entity collada-model="#car"></a-entity>
     </a-scene>
   </body>
 </html>
