--- a/carChase.html
+++ b/carChase.html
@@ -1,13 +1,23 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
-  <body>
-    <a-scene>
-      <a-assets>
-        <a-asset-item id="car" src="aventador.dae" crossorigin="anonymous"></a-asset-item>
+    <a-scene id="scene">
+      <a-assets id="assets">
+        <a-asset-item id="car-dae" src="https://zeekw.github.io/aFrameTests/aventador.dae"></a-asset-item>
       </a-assets>
-      <a-entity collada-model="#car"></a-entity>
+      <a-entity camera="userHeight:1.4" wasd-controls="" look-controls="" aframe-injected="" data-aframe-inspector="default-camera"></a-entity>
+      <a-collada-model id="car" src="#car-dae" position="-0.7 0 -40" rotation="0 90 0" sound="src: url(driveby.mp3); begin: 5000">
+        <a-animation attribute="position"
+               dur="5000"
+               begin="5000"
+               fill="forwards"
+               to="-0.7 0 0"
+               repeat="0"></a-animation>
+      </a-collada-model>
+      <a-plane color="#555" height="100" width="100" rotation="-90 0 0"></a-plane>
     </a-scene>
+    <script src="carChase.js"></script>
   </body>
 </html>
