--- a/carChase.html
+++ b/carChase.html
@@ -4,18 +4,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
     <a-scene id="scene">
-      <a-assets id="assets">
-        <a-asset-item id="car-dae" src="https://zeekw.github.io/aFrameTests/aventador.dae"></a-asset-item>
-        <audio id="car-sound" src="/driveby.mp3"></audio>
+      <a-assets id="assets" timeout="10000">
+        <a-asset-item id="car-dae" src="https://zeekw.github.io/aFrameTests/aventador.dae" preload="auto"></a-asset-item>
+        <audio id="car-sound" src="https://zeekw.github.io/aFrameTests/driveby.mp3" preload="auto">
       </a-assets>
       <a-entity camera="userHeight:1.4" wasd-controls="" look-controls="" aframe-injected="" data-aframe-inspector="default-camera"></a-entity>
-      <a-collada-model id="car" src="#car-dae" position="-0.7 0 -40" rotation="0 90 0" sound="src:#car-sound; begin: 5000">
+      <a-collada-model id="car" src="#car-dae" position="-0.7 0 -40" rotation="0 90 0">
         <a-animation attribute="position"
-               dur="5000"
-               begin="5000"
+               dur="2000"
+               begin="model-loaded"
                fill="forwards"
                to="-0.7 0 0"
-               repeat="0"></a-animation>
+               repeat="0"
+         ></a-animation>
+        <a-sound src="#car-sound" on="model-loaded"></a-sound>
       </a-collada-model>
       <a-plane color="#555" height="100" width="100" rotation="-90 0 0"></a-plane>
     </a-scene>
