--- a/carChase.html
+++ b/carChase.html
@@ -1,25 +1,24 @@
 <html>
   <head>
-    <script src="https://aframe.io/releases/0.3.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
     <a-scene id="scene">
       <a-assets id="assets" timeout="10000">
-        <a-asset-item id="car-dae" src="https://zeekw.github.io/aFrameTests/aventador.dae" preload="auto"></a-asset-item>
-        <audio id="car-sound" src="https://zeekw.github.io/aFrameTests/driveby.mp3" preload="auto">
+        <a-asset-item id="car-dae" src="aventador.dae" preload="auto"></a-asset-item>
+        <audio id="car-sound" src="driveby.mp3" preload="auto">
       </a-assets>
-      <a-entity camera="userHeight:1.4" wasd-controls="" look-controls="" aframe-injected="" data-aframe-inspector="default-camera"></a-entity>
-      <a-collada-model id="car" src="#car-dae" position="-0.7 0 -40" rotation="0 90 0">
+      <a-sky color="#004"></a-sky>
+      <a-entity camera="userHeight:1.4" wasd-controls=""></a-entity>
+      <a-collada-model id="car" src="#car-dae" position="-0.7 0 -100" rotation="0 90 0" sound="src:#car-sound; on:model-loaded">
         <a-animation attribute="position"
-               dur="2000"
-               begin="model-loaded"
+               dur="7000"
                fill="forwards"
-               to="-0.7 0 0"
+               to="-0.7 0 20"
                repeat="0"
          ></a-animation>
-        <a-sound src="#car-sound" on="model-loaded"></a-sound>
       </a-collada-model>
-      <a-plane color="#555" height="100" width="100" rotation="-90 0 0"></a-plane>
+      <a-plane color="#002" height="200" width="200" rotation="-90 0 0"></a-plane>
     </a-scene>
     <script src="carChase.js"></script>
   </body>
